kubernetes/apps/radarr/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: radarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.pxldi.de`)
      kind: Rule
      middlewares:
        - name: authentik-forward-auth
          namespace: traefik
      services:
        - name: radarr
          port: 7878
  tls:
    certResolver: letsencrypt
